@@ -3838,3 +3838,5 @@ Start... early ages
 - bios/amiga.c: Added check for 32-bit address bus. (VRI)
 - bios/initinfo.c bios/machine.c bios/machine.h: Removed duplicate declaration
   of mcpu and fputype. (VRI)
+- bios/amiga.c bios/amiga.h bios/amiga2.S bios/machine.c: Added support for
+  Slow RAM. (VRI)
